# ditaflow-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
ditaflow/cli/: dtf.py
ditaflow/converter/: class_chain.py  dita_parser.py  dita_serializer.py  specialisation_registry.py
ditaflow/dtvl/: __init__.py  engine.py  helpers.py  model.py  sandbox.py  schematron.py
ditaflow/grammar/: content_model_ast.py  element_registry.py  json_export.py  overrides.py  pattern_resolver.py  prosemirror_export.py  rng_ast.py  rng_loader.py
ditaflow/schemas/dita1.3/: LICENSE-DITA-OT.txt
ditaflow/schemas/dita1.3/technicalContent/rng/: concept.rng  generalTask.rng  glossentry.rng  glossgroup.rng  reference.rng  task.rng  topic.rng  troubleshooting.rng
ditaflow/validator/: content_model.py  dtf_validator.py  relaxng_validator.py
schema/: ditaflow.schema.json  ditaflow.types.ts
spec/: DITAFLOW-SPEC.md
tests/fixtures/synthetic_rng/: domain_a.rng  domain_b.rng  shared.rng  shell.rng
tests/round_trip/: _helpers.py  test_project_roundtrip.py  test_roundtrip.py
tests/round_trip/fixtures/dita/: bookmap_with_bookmeta_and_divisions.dita  bookmap_with_keyscope_ditaval.dita  concept_with_conref.dita  map_with_reltable_topicgroup_keydef.dita  reference_with_tables.dita  simple_task.dita  topic_with_unregistered_specialization.dita
tests/round_trip/fixtures/projects/product-manual/: root.ditamap
tests/round_trip/fixtures/projects/product-manual/filters/: server.ditaval
tests/unit/: test_branch_filtering.py  test_content_model.py  test_dtvl_engine.py  test_dtvl_schematron.py  test_ext_attrs.py  test_grammar_element_registry.py  test_grammar_json_export.py  test_grammar_overrides.py  test_grammar_pattern_resolver.py  test_grammar_prosemirror_export.py  test_grammar_rng_loader.py  test_keyscope_path.py  test_mark_vs_element_rule.py  test_packaging.py  test_relaxng_validator.py  test_specialisation_registry.py
(+2 files in other folders)
