[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ditaflow-core"
version = "0.1.0"
description = "Lossless JSON representation of the DITA Information Model with bidirectional DITA XML converter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "DitaFlow Contributors" }]
keywords = ["dita", "xml", "technical-writing", "documentation", "cms", "ditaflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.2.0",
    "jsonschema>=4.22.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "lxml-stubs>=0.5.1",
    "types-jsonschema>=4.22.0",
    "build>=1.2.0",
]

[project.scripts]
dtf = "ditaflow.cli.dtf:cli"

[project.urls]
Homepage = "https://github.com/ditaflow/ditaflow-core"
Documentation = "https://ditaflow.io/docs"
Repository = "https://github.com/ditaflow/ditaflow-core"
Issues = "https://github.com/ditaflow/ditaflow-core/issues"
Changelog = "https://github.com/ditaflow/ditaflow-core/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["ditaflow"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ditaflow --cov-report=term-missing"

[tool.coverage.run]
source = ["ditaflow"]
omit = ["tests/*", "cli/*"]
